@@ -25,7 +25,8 @@ ufw (0.34) UNRELEASED; urgency=low
   * fix return of various invalid extended rules in parser.get_command()
   * clarify 'limit' command in man page (LP: #1089262)
   * implement route rules (ie, manage FORWARD, LP: #262421). See man page for
-    details.
+    details. This change reworked interface parsing and we now allow
+    interfaces with '_' in the name (LP: #1098472)
   * add state RELATED,ESTABLISHED rule to ufw-before-forward in before*.rules
     like we do with ufw-before-input. This will only affect systems with ip
     forwarding enabled via sysctl
